data/derived/sp14/progs/unify/prog4671.ml.out
Characters 55-73:
  let f a x = (+)(List.combine a x)in
                 ^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type int
